--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container__left framed-golden-2">
 
         <div class="score_box frame">
-            <span id="scores_points">Win: 0 |  Losw:  0</span>
+            <span id="scores_points">Win  : 0 |  Losw:  0</span>
         </div>
         <div class="menu_avatar">
             <img id="card-image">
@@ -47,8 +47,26 @@
     </div>
 
     <div class="container__right">
+        <div class="box__container">
 
-        <div class="card-box__container">
+            <div class="card-box framed"  id="computer-cards"></div>
+
+            <div class="card-versus">
+                <div class="versus-top">
+                    <div class="card-infield">
+                        <img id="player-field-card" height="180px" width="125px">
+                    </div>
+                    <img height="100px" src="./src/assets/icons/millenium2.png">
+                    <div class="card-infield">
+                        <img id="computer-field-card" height="180px" width="125px">
+                    </div>
+                </div>
+                <div class="versus-bottom">
+                    <button id="next-duel" class="rpgui-button"  onclick="resetDuel()">GANHOU</button>
+                </div>
+            </div>
+
+            <div class="card-box framed"id="player-cards"></div>
 
         </div>
 
