--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="container__right">
-        <div class="box__container">
+        <div class="card-box__container">
 
             <div class="card-box framed"  id="computer-cards"></div>
 
