--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <img id="card-image">
         </div>
         <div class="card_details frame">
-            <p id="card-name">a</p>
-            <p id="card-type">b</p>
+            <p id="card-name">Name</p>
+            <p id="card-type">Attibute</p>
         </div>
 
     </div>
@@ -51,7 +51,7 @@
 
             <div class="card-box framed"  id="computer-cards"></div>
 
-            <div class="card-versus">
+            <div class="card-versus__container">
                 <div class="versus-top">
                     <div class="card-infield">
                         <img id="player-field-card" height="180px" width="125px">
