--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- favicon -->
+    <link rel="shortcut icon" href="./src/assets/favicon/Favicon.ico" type="image/x-icon">
+
+
     <!-- title -->
     <title>Jo-kem-po com cartas de Yu-Gi-Ou</title>
 
@@ -23,6 +27,9 @@
 
 </head>
 <body>
+    <audio id="bgm" loop>
+        <source src="./src/assets/audios/egyptian_duel.mp3"  type="audio/mp3"/>
+    </audio>
    <div class="bg-video">
     <video class="video" autoplay  loop  muted>
         <source src="./src/assets/video/yugi.mp4" type="video/mp4"/>
